# edu-assistant

./: .env.example  .env.streamlit  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/agents/: __init__.py  base.py  carreras.py  cursos.py  ventas.py
app/memory/: history.py
app/router/: router.py
app/utils/: data_loader.py  helpers.py
data/: knowledge_base_Caso.xlsx
scripts/: demo_launcher.py
ui/: streamlit_app.py
